[tool.poetry]
name = "google-maps-scraper"
version = "0.1.0"
description = ""
authors = ["volodkindv <volodkindv@skbkontur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
undetected-chromedriver = "3.4.6"
selenium = "4.5.0"
joblib = "1.2.0"
bose = "2.0.17"
requests = "^2.31.0"
pydash = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
